Added SEO and https

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="XtreeCommerce is an import-Export Company deals in different types of Sportswear"
+      content="XtreeCommerce is the best Import Export Company in Sialkot deals in different types of Sportswear and Sports suits with quality material"
+    />
+    <meta name="robots" content="index,follow" />
+    <meta
+      name="keywords"
+      content="Commerce, XtreeCommerce, Import, Export, Sports Goods, Sportswear, Quality Products, Sialkot, Sports , Suits, "
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
