--- a/products.html
+++ b/products.html
@@ -97,8 +97,8 @@ https://templatemo.com/tm-546-sixteen-clothing
         <div class="row">
           <div class="col-md-12">
             <div class="text-content">
-              <h4>new arrivals</h4>
-              <h2>sixteen products</h2>
+              <h4 style="color: #b8d31a; font-size: 2rem">new arrivals</h4>
+              <h2>Xtree products</h2>
             </div>
           </div>
         </div>
