--- a/index.html
+++ b/index.html
@@ -92,20 +92,20 @@
       <div class="owl-banner owl-carousel">
         <div class="banner-item-01">
           <div class="text-content">
-            <h4 style="color: #b8d31a; font-size: 2rem">SPORTSWEAR</h4>
+            <h4 style="color: #b8d31a;text-shadow: 2px 2px black; font-size: 2rem">SPORTSWEAR</h4>
             
             <h2>Worldwide Shipment</h2>
           </div>
         </div>
         <div class="banner-item-02">
           <div class="text-content">
-            <h4 style="color: #b8d31a; font-size: 2rem">Leather Jackets</h4>
-            <h2 style="color: #f33f3f; font-weight: bold">Best in Quality</h2>
+            <h4 style="color: #b8d31a;text-shadow: 2px 2px black; font-size: 2rem">Leather Jackets</h4>
+            <h2 style="color: #f33f3f;text-shadow: 2px 2px black; font-weight: bold">Best in Quality</h2>
           </div>
         </div>
         <div class="banner-item-03">
           <div class="text-content">
-            <h4 style="color: #b8d31a; font-size: 2rem">Customized Order</h4>
+            <h4 style="color: #b8d31a;text-shadow: 2px 2px black; font-size: 2rem">Customized Order</h4>
             <h2>Grab Your Products</h2>
           </div>
         </div>
@@ -118,7 +118,7 @@
         <class class="row">
           <div class="col-md-12">
             <div class="section-heading">
-              <h2>Main Categories</h2>
+              <h2 >Main Categories</h2>
               <a href="products.html"
                 >view all products <i class="fa fa-angle-right"></i
               ></a>
@@ -148,7 +148,7 @@
                   alt="Rain Jackets"
               /></a>
               <div class="down-content">
-                <a href="contact.html"><h3 style="color: #f33f3f">Fashion Jackets</h3></a>
+                <a href="contact.html"><h3 style="color: #f33f3f">Fashion Garments</h3></a>
                 <p>
                   Buy high quality customized leather and fashion jackets with
                   worldwide shipping.
@@ -186,12 +186,12 @@
         <div class="row">
           <div class="col-md-12">
             <div class="section-heading">
-              <h2>About XtreeIndustry</h2>
+              <h2 >About XtreeIndustry</h2>
             </div>
           </div>
           <div class="col-md-6">
             <div class="left-content">
-              <h4>Looking for the best sports products?</h4>
+              <h4 style="color: black;">Looking for the best sports products?</h4>
               <p>
                 XtreeIndustry is an import & export company based in Sialkot (Pakistan), deals in manufacturing and import & export of products 
                 related to sports goods, sportswear, protections and many others. We are committed to provide: 
@@ -222,7 +222,7 @@
             <div class="inner-content">
               <div class="row">
                 <div class="col-md-8">
-                  <h4>Grab Your Products from  <em>XTree</em>Industry</h4>
+                  <h4 style="color: black;">Grab Your Products from  <em>XTree</em>Industry</h4>
                   <p>
                     We are also available for customized order of all kinds of products 
                     related to sports goods, sportswear, protections, etc. Contact us for info. 
