--- a/about.html
+++ b/about.html
@@ -20,7 +20,24 @@
       href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap"
       rel="stylesheet"
     />
-
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./assets/images/Logo/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/Logo/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./assets/images/Logo/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./assets/images/Logo/site.webmanifest" />
     <title>XTreeIndustry - About Page</title>
 
     <!-- Bootstrap core CSS -->
@@ -115,7 +132,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           </div>
           <div class="col-md-6">
             <div class="right-image">
-              <img src="assets/images/feature-image.jpg" alt="" />
+              <img src="assets/images/feature-image.jpg" alt="XtreeIndustry" />
             </div>
           </div>
           <div class="col-md-6">
@@ -132,20 +149,6 @@ https://templatemo.com/tm-546-sixteen-clothing
                 ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti
                 necessitatibus perspiciatis quis.
               </p>
-              <ul class="social-icons">
-                <li>
-                  <a href="#"><i class="fa fa-facebook"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa fa-linkedin"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa fa-behance"></i></a>
-                </li>
-              </ul>
             </div>
           </div>
         </div>
@@ -157,13 +160,14 @@ https://templatemo.com/tm-546-sixteen-clothing
         <div class="row">
           <div class="col-md-12">
             <div class="section-heading">
-              <h2>Our Team Members</h2>
+              <h2>Founder</h2>
             </div>
           </div>
+
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/team_01.jpg" alt="" />
+                <img src="assets/images/team_06.jpg" alt="Salman Butt" />
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
@@ -171,186 +175,18 @@ https://templatemo.com/tm-546-sixteen-clothing
                         <a href="#"><i class="fa fa-facebook"></i></a>
                       </li>
                       <li>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-whatsapp"></i></a>
                       </li>
                       <li>
-                        <a href="#"><i class="fa fa-linkedin"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="fa fa-behance"></i></a>
+                        <a href="#"><i class="fa fa-phone"></i></a>
                       </li>
                     </ul>
                   </div>
                 </div>
               </div>
               <div class="down-content">
-                <h4>Johnny William</h4>
-                <span>CO-Founder</span>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing itaque
-                  corporis nulla.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="team-member">
-              <div class="thumb-container">
-                <img src="assets/images/team_02.jpg" alt="" />
-                <div class="hover-effect">
-                  <div class="hover-content">
-                    <ul class="social-icons">
-                      <li>
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="fa fa-linkedin"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="fa fa-behance"></i></a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="down-content">
-                <h4>Karry Pitcher</h4>
-                <span>Product Expert</span>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing itaque
-                  corporis nulla.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="team-member">
-              <div class="thumb-container">
-                <img src="assets/images/team_03.jpg" alt="" />
-                <div class="hover-effect">
-                  <div class="hover-content">
-                    <ul class="social-icons">
-                      <li>
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="fa fa-linkedin"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="fa fa-behance"></i></a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="down-content">
-                <h4>Michael Soft</h4>
-                <span>Chief Marketing</span>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing itaque
-                  corporis nulla.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="team-member">
-              <div class="thumb-container">
-                <img src="assets/images/team_04.jpg" alt="" />
-                <div class="hover-effect">
-                  <div class="hover-content">
-                    <ul class="social-icons">
-                      <li>
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="fa fa-linkedin"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="fa fa-behance"></i></a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="down-content">
-                <h4>Mary Cool</h4>
-                <span>Product Specialist</span>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing itaque
-                  corporis nulla.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="team-member">
-              <div class="thumb-container">
-                <img src="assets/images/team_05.jpg" alt="" />
-                <div class="hover-effect">
-                  <div class="hover-content">
-                    <ul class="social-icons">
-                      <li>
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="fa fa-linkedin"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="fa fa-behance"></i></a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="down-content">
-                <h4>George Walker</h4>
-                <span>Product Photographer</span>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing itaque
-                  corporis nulla.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="team-member">
-              <div class="thumb-container">
-                <img src="assets/images/team_06.jpg" alt="" />
-                <div class="hover-effect">
-                  <div class="hover-content">
-                    <ul class="social-icons">
-                      <li>
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="fa fa-linkedin"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="fa fa-behance"></i></a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="down-content">
-                <h4>Kate Town</h4>
-                <span>General Manager</span>
+                <h4>Salman Butt</h4>
+                <span>Proprietor</span>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipisicing itaque
                   corporis nulla.
@@ -371,12 +207,11 @@ https://templatemo.com/tm-546-sixteen-clothing
                 <i class="fa fa-gear"></i>
               </div>
               <div class="down-content">
-                <h4>Product Management</h4>
+                <h4>Product Sourcing</h4>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur an adipisicing elit.
                   Itaque, corporis nulla at quia quaerat.
                 </p>
-                <a href="#" class="filled-button">Read More</a>
               </div>
             </div>
           </div>
@@ -386,12 +221,11 @@ https://templatemo.com/tm-546-sixteen-clothing
                 <i class="fa fa-gear"></i>
               </div>
               <div class="down-content">
-                <h4>Customer Relations</h4>
+                <h4>Product Manufacturing</h4>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur an adipisicing elit.
                   Itaque, corporis nulla at quia quaerat.
                 </p>
-                <a href="#" class="filled-button">Details</a>
               </div>
             </div>
           </div>
@@ -401,51 +235,11 @@ https://templatemo.com/tm-546-sixteen-clothing
                 <i class="fa fa-gear"></i>
               </div>
               <div class="down-content">
-                <h4>Global Collection</h4>
+                <h4>Product Shipment</h4>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur an adipisicing elit.
                   Itaque, corporis nulla at quia quaerat.
                 </p>
-                <a href="#" class="filled-button">Read More</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="happy-clients">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="section-heading">
-              <h2>Happy Partners</h2>
-            </div>
-          </div>
-          <div class="col-md-12">
-            <div class="owl-clients owl-carousel">
-              <div class="client-item">
-                <img src="assets/images/client-01.png" alt="1" />
-              </div>
-
-              <div class="client-item">
-                <img src="assets/images/client-01.png" alt="2" />
-              </div>
-
-              <div class="client-item">
-                <img src="assets/images/client-01.png" alt="3" />
-              </div>
-
-              <div class="client-item">
-                <img src="assets/images/client-01.png" alt="4" />
-              </div>
-
-              <div class="client-item">
-                <img src="assets/images/client-01.png" alt="5" />
-              </div>
-
-              <div class="client-item">
-                <img src="assets/images/client-01.png" alt="6" />
               </div>
             </div>
           </div>
