--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,24 @@
       href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./assets/images/Logo/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/Logo/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./assets/images/Logo/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./assets/images/Logo/site.webmanifest" />
 
     <title>XTreeIndustry - Contact Page</title>
 
@@ -99,58 +117,7 @@ https://templatemo.com/tm-546-sixteen-clothing
             <div class="text-content">
               <h4>contact us</h4>
               <h2>let’s get in touch</h2>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="find-us">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="section-heading">
-              <h2>Our Location on Maps</h2>
-            </div>
-          </div>
-          <div class="col-md-8">
-            <!-- How to change your own map point
-	1. Go to Google Maps
-	2. Click on your location point
-	3. Click "Share" and choose "Embed map" tab
-	4. Copy only URL and paste it within the src="" field below
--->
-            <div id="map">
-              <iframe
-                src="https://maps.google.com/maps?q=Av.+L%C3%BAcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed"
-                width="100%"
-                height="330px"
-                frameborder="0"
-                style="border: 0"
-                allowfullscreen
-              ></iframe>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="left-content">
-              <h4>About our office</h4>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisic elit. Sed
-                voluptate nihil eumester consectetur similiqu consectetur.<br /><br />Lorem
-                ipsum dolor sit amet, consectetur adipisic elit. Et,
-                consequuntur, modi mollitia corporis ipsa voluptate corrupti.
-              </p>
-              <ul class="social-icons">
-                <li>
-                  <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa fa-linkedin"></i></a>
-                </li>
-              </ul>
+              <h4>+923030626882</h4>
             </div>
           </div>
         </div>
@@ -160,76 +127,17 @@ https://templatemo.com/tm-546-sixteen-clothing
     <div class="send-message">
       <div class="container">
         <div class="row">
-          <div class="col-md-12">
-            <div class="section-heading">
-              <h2>Send us a Message</h2>
-            </div>
-          </div>
           <div class="col-md-8">
             <div class="contact-form">
-              <form id="contact" action="" method="post">
-                <div class="row">
-                  <div class="col-lg-12 col-md-12 col-sm-12">
-                    <fieldset>
-                      <input
-                        name="name"
-                        type="text"
-                        class="form-control"
-                        id="name"
-                        placeholder="Full Name"
-                        required=""
-                      />
-                    </fieldset>
-                  </div>
-                  <div class="col-lg-12 col-md-12 col-sm-12">
-                    <fieldset>
-                      <input
-                        name="email"
-                        type="text"
-                        class="form-control"
-                        id="email"
-                        placeholder="E-Mail Address"
-                        required=""
-                      />
-                    </fieldset>
-                  </div>
-                  <div class="col-lg-12 col-md-12 col-sm-12">
-                    <fieldset>
-                      <input
-                        name="subject"
-                        type="text"
-                        class="form-control"
-                        id="subject"
-                        placeholder="Subject"
-                        required=""
-                      />
-                    </fieldset>
-                  </div>
-                  <div class="col-lg-12">
-                    <fieldset>
-                      <textarea
-                        name="message"
-                        rows="6"
-                        class="form-control"
-                        id="message"
-                        placeholder="Your Message"
-                        required=""
-                      ></textarea>
-                    </fieldset>
-                  </div>
-                  <div class="col-lg-12">
-                    <fieldset>
-                      <button
-                        type="submit"
-                        id="form-submit"
-                        class="filled-button"
-                      >
-                        Send Message
-                      </button>
-                    </fieldset>
-                  </div>
-                </div>
-              </form>
+              <iframe
+                src="https://docs.google.com/forms/d/e/1FAIpQLSf_WEAy7_OBsu10phXC2Z5yA8iCucUsg-z9OvIomtSYrOyXWw/viewform?embedded=true"
+                width="700"
+                height="1100"
+                frameborder="0"
+                marginheight="0"
+                marginwidth="0"
+                >Loading…</iframe
+              >
             </div>
           </div>
           <div class="col-md-4">
@@ -287,46 +195,57 @@ https://templatemo.com/tm-546-sixteen-clothing
         </div>
       </div>
     </div>
-
-    <div class="happy-clients">
+    <div class="find-us">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
             <div class="section-heading">
-              <h2>Our Happy Customers</h2>
+              <h2>Our Location on Maps</h2>
             </div>
           </div>
-          <div class="col-md-12">
-            <div class="owl-clients owl-carousel">
-              <div class="client-item">
-                <img src="assets/images/client-01.png" alt="1" />
-              </div>
-
-              <div class="client-item">
-                <img src="assets/images/client-01.png" alt="2" />
-              </div>
-
-              <div class="client-item">
-                <img src="assets/images/client-01.png" alt="3" />
-              </div>
-
-              <div class="client-item">
-                <img src="assets/images/client-01.png" alt="4" />
-              </div>
-
-              <div class="client-item">
-                <img src="assets/images/client-01.png" alt="5" />
-              </div>
-
-              <div class="client-item">
-                <img src="assets/images/client-01.png" alt="6" />
-              </div>
+          <div class="col-md-8">
+            <!-- How to change your own map point
+	1. Go to Google Maps
+	2. Click on your location point
+	3. Click "Share" and choose "Embed map" tab
+	4. Copy only URL and paste it within the src="" field below
+-->
+            <div id="map">
+              <iframe
+                src="https://maps.google.com/maps?q=Av.+L%C3%BAcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                width="100%"
+                height="330px"
+                frameborder="0"
+                style="border: 0"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="left-content">
+              <h4>About our office</h4>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisic elit. Sed
+                voluptate nihil eumester consectetur similiqu consectetur.<br /><br />Lorem
+                ipsum dolor sit amet, consectetur adipisic elit. Et,
+                consequuntur, modi mollitia corporis ipsa voluptate corrupti.
+              </p>
+              <ul class="social-icons">
+                <li>
+                  <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fa fa-phone"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
       </div>
     </div>
-
     <footer>
       <div class="container">
         <div class="row">
