--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="contact.html"
+              <a href="products.html"
                 ><img
                   src="assets/images/Feature Products/Sportswear.jpg"
                   alt="Rugby Sportswear"
               /></a>
               <div class="down-content">
-                <a href="contact.html"><h3 style="color: #f33f3f">Sportswear</h3></a>
+                <a href="products.html"><h3 style="color: #f33f3f">Sportswear</h3></a>
                 <p>
                   Buy high quality customized Sportswear with worldwide
                   shipping.
@@ -146,13 +146,13 @@
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="contact.html"
+              <a href="products.html"
                 ><img
                   src="assets/images/Feature Products/Fashion Jackets.jpg"
                   alt="Rain Jackets"
               /></a>
               <div class="down-content">
-                <a href="contact.html"><h3 style="color: #f33f3f">Fashion Garments</h3></a>
+                <a href="products.html"><h3 style="color: #f33f3f">Fashion Garments</h3></a>
                 <p>
                   Buy high quality customized leather and fashion jackets with
                   worldwide shipping.
@@ -162,17 +162,32 @@
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="contact.html"
+              <a href="products.html"
                 ><img
-                  src="assets/images/Feature Products/Gloves.jpg"
-                  alt="Gloves"
+                  src="assets/images/Feature Products/Motorbike Garments.jpg"
+                  alt="Gloves & Protection"
               /></a>
               <div class="down-content">
-                <a href="contact.html"><h3 style="color: #f33f3f">Gloves Collection</h3></a>
+                <a href="products.html"><h3 style="color: #f33f3f; font-size: 27px;">Motorbike Garments</h3></a>
 
                 <p>
-                  Buy high quality customized gloves of all kinds with worldwide
-                  shipping.
+                  Buy high quality gloves, motorbike garments & Protection.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="product-item">
+              <a href="products.html"
+                ><img
+                  src="assets/images/Feature Products/Gloves & Protection.jpg"
+                  alt="Gloves & Protection"
+              /></a>
+              <div class="down-content">
+                <a href="products.html"><h3 style="color: #f33f3f; font-size: 27px;">Protection & Gloves</h3></a>
+
+                <p>
+                  Buy high quality customized Gloves Collection and Protections.
                 </p>
               </div>
             </div>
@@ -212,7 +227,7 @@
           </div>
           <div class="col-md-6">
             <div class="right-image">
-              <img src="assets/images/feature-image.jpg" alt="" />
+              <img src="assets/images/feature-image.jpg" alt="featured image" />
             </div>
           </div>
         </div>
