About.html updated

--- a/about.html
+++ b/about.html
@@ -132,22 +132,30 @@ https://templatemo.com/tm-546-sixteen-clothing
           </div>
           <div class="col-md-6">
             <div class="right-image">
-              <img src="assets/images/feature-image.jpg" alt="XtreeIndustry" />
+              <img
+                src="assets/images/feature-image.jpg"
+                alt="XtreeIndustry"
+                style="border-radius: 20px"
+              />
             </div>
           </div>
           <div class="col-md-6">
             <div class="left-content">
               <h4>Who we are &amp; What we do?</h4>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed
-                voluptate nihil eum consectetur similique? Consectetur, quod,
-                incidunt, harum nisi dolores delectus reprehenderit voluptatem
-                perferendis dicta dolorem non blanditiis ex fugiat. Lorem ipsum
-                dolor sit amet, consectetur adipisicing elit.<br /><br />Lorem
-                ipsum dolor sit amet, consectetur adipisicing elit. Et,
-                consequuntur, modi mollitia corporis ipsa voluptate corrupti eum
-                ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti
-                necessitatibus perspiciatis quis.
+                <strong>XtreeIndustry</strong> is an import & export company
+                based in Sialkot (Pakistan), deals in manufacturing and import &
+                export of products related to sports goods, sportswear,
+                motorbike garments, Leather garments, protections and many
+                others. <br />
+                The city of Sialkot has been a center of excellence for the
+                production of sports goods for more than 100 years. The first
+                record of manufacturing of sports goods in Sialkot can be traced
+                back to 1883 with the products such as cricket bats, hockey
+                sticks, polo sticks etc. In 1918, football (soccer ball) was
+                added and was supplied to British Army stationed at Singapore.
+                Today the Sports Goods sector of Sialkot is at its climax as it
+                has acquired an important place in international sports goods.
               </p>
             </div>
           </div>
@@ -185,11 +193,11 @@ https://templatemo.com/tm-546-sixteen-clothing
                 </div>
               </div>
               <div class="down-content">
-                <h4>Salman Butt</h4>
-                <span>Proprietor</span>
+                <h4>Mr. Salman Butt</h4>
+                <span>Sole Proprietor</span>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing itaque
-                  corporis nulla.
+                  Salman is a highly talented and well educated person who is
+                  dedicated to provide best services and value to his clients.
                 </p>
               </div>
             </div>
@@ -209,8 +217,8 @@ https://templatemo.com/tm-546-sixteen-clothing
               <div class="down-content">
                 <h4>Product Sourcing</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur an adipisicing elit.
-                  Itaque, corporis nulla at quia quaerat.
+                  The most important step of producing best quality products is
+                  to find the high quality material and to source the material.
                 </p>
               </div>
             </div>
@@ -223,8 +231,9 @@ https://templatemo.com/tm-546-sixteen-clothing
               <div class="down-content">
                 <h4>Product Manufacturing</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur an adipisicing elit.
-                  Itaque, corporis nulla at quia quaerat.
+                  The next step is to produce those products with minimum errors
+                  and rejections in order to increase productivity and
+                  efficiency of the product.
                 </p>
               </div>
             </div>
@@ -237,8 +246,9 @@ https://templatemo.com/tm-546-sixteen-clothing
               <div class="down-content">
                 <h4>Product Shipment</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur an adipisicing elit.
-                  Itaque, corporis nulla at quia quaerat.
+                  Final step includes the satisfaction of our customers and
+                  clients that they get their required products from the best
+                  courier services.
                 </p>
               </div>
             </div>
