--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="robots" content="index,follow" />
     <meta
       name="description"
-      content="XTreeIndustry deals in Sportswear, Sports Outfits, Leather Jacksets and Leather Gloves. The Company is based in Sialkot, Pakistan"
+      content="XTreeIndustry deals in Sportswear, Sports Outfits, Leather Jacksets, Motorbike Garments, Motorbike Protections and Leather Gloves. The Company is based in Sialkot, Pakistan"
     />
     <meta
       name="keywords"
@@ -25,7 +25,7 @@
 <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/Logo/favicon-16x16.png">
 <link rel="manifest" href="./assets/images/Logo/site.webmanifest">
 
-    <title>Sportswear | Leather Jackets | Sports Outfits</title>
+    <title>Sportswear | Leather Jackets | MotorBike Garments </title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
@@ -213,13 +213,13 @@
               <h4 style="color: black;">Looking for the best sports products?</h4>
               <p>
                 XtreeIndustry is an import & export company based in Sialkot (Pakistan), deals in manufacturing and import & export of products 
-                related to sports goods, sportswear, protections and many others. We are committed to provide: 
+                related to sports goods, sportswear, protections and many others. We are committed to provide:
               </p>
               <ul class="featured-list">
-                <li><a >High Quality Products</a></li>
-                <li><a>Research and developement of the products</a></li>
-                <li><a>Trustworthy relationship</a></li>
-                <li><a>Worldwide Shipment</a></li>
+                <li><a href="about.html">High Quality Products</a></li>
+                <li><a href="about.html">Research and developement of the products</a></li>
+                <li><a href="about.html">Trustworthy relationship</a></li>
+                <li><a href="about.html">Worldwide Shipment</a></li>
                 
               </ul>
               <a href="about.html" class="filled-button">Read More</a>
@@ -227,7 +227,8 @@
           </div>
           <div class="col-md-6">
             <div class="right-image">
-              <img src="assets/images/feature-image.jpg" alt="featured image" />
+              <img src="assets/images/feature-image.jpg"
+              style="border-radius: 20px" alt="featured image" />
             </div>
           </div>
         </div>
