--- a/about.html
+++ b/about.html
@@ -116,6 +116,35 @@ https://templatemo.com/tm-546-sixteen-clothing
             <div class="text-content">
               <h4>about us</h4>
               <h2>our company</h2>
+              <br />
+              <div>
+                <ul class="social-icons">
+                  <li>
+                    <a href="mailto:xtreeindustry@gmail.com" target="_blank"
+                      ><i class="fa fa-envelope"></i
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="https://wa.me/00923312282829" target="_blank"
+                      ><i class="fa fa-whatsapp"></i
+                    ></a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.facebook.com/honey.butt.564"
+                      target="_blank"
+                      ><i class="fa fa-facebook"></i
+                    ></a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.instagram.com/xtreeindustry/"
+                      target="_blank"
+                      ><i class="fa fa-instagram"></i
+                    ></a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
@@ -147,7 +176,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                 based in Sialkot (Pakistan), deals in manufacturing and import &
                 export of products related to sports goods, sportswear,
                 motorbike garments, Leather garments, protections and many
-                others. <br />
+                others. <br /><br />
                 The city of Sialkot has been a center of excellence for the
                 production of sports goods for more than 100 years. The first
                 record of manufacturing of sports goods in Sialkot can be traced
@@ -180,13 +209,22 @@ https://templatemo.com/tm-546-sixteen-clothing
                   <div class="hover-content">
                     <ul class="social-icons">
                       <li>
-                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a
+                          href="https://www.facebook.com/honey.butt.564"
+                          target="_blank"
+                          ><i class="fa fa-facebook"></i
+                        ></a>
                       </li>
                       <li>
-                        <a href="#"><i class="fa fa-whatsapp"></i></a>
+                        <a href="https://wa.me/00923312282829" target="_blank"
+                          ><i class="fa fa-whatsapp"></i
+                        ></a>
                       </li>
+
                       <li>
-                        <a href="#"><i class="fa fa-phone"></i></a>
+                        <a href="tel:+923030626882"
+                          ><i class="fa fa-phone"></i
+                        ></a>
                       </li>
                     </ul>
                   </div>
