--- a/products.html
+++ b/products.html
@@ -103,6 +103,35 @@ https://templatemo.com/tm-546-sixteen-clothing
             <div class="text-content">
               <h4 style="color: #b8d31a;text-shadow: 2px 2px black; font-size: 2rem">Order Now</h4>
               <h2>Xtree products</h2>
+              <br />
+              <div>
+                <ul class="social-icons">
+                  <li>
+                    <a href="mailto:xtreeindustry@gmail.com" target="_blank"
+                      ><i class="fa fa-envelope"></i
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="https://wa.me/00923312282829" target="_blank"
+                      ><i class="fa fa-whatsapp"></i
+                    ></a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.facebook.com/honey.butt.564"
+                      target="_blank"
+                      ><i class="fa fa-facebook"></i
+                    ></a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.instagram.com/xtreeindustry/"
+                      target="_blank"
+                      ><i class="fa fa-instagram"></i
+                    ></a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
