--- a/contact.html
+++ b/contact.html
@@ -117,7 +117,35 @@ https://templatemo.com/tm-546-sixteen-clothing
             <div class="text-content">
               <h4>contact us</h4>
               <h2>let’s get in touch</h2>
-              <h4>+923030626882</h4>
+              <br />
+              <div>
+                <ul class="social-icons">
+                  <li>
+                    <a href="mailto:xtreeindustry@gmail.com" target="_blank"
+                      ><i class="fa fa-envelope"></i
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="https://wa.me/00923312282829" target="_blank"
+                      ><i class="fa fa-whatsapp"></i
+                    ></a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.facebook.com/honey.butt.564"
+                      target="_blank"
+                      ><i class="fa fa-facebook"></i
+                    ></a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.instagram.com/xtreeindustry/"
+                      target="_blank"
+                      ><i class="fa fa-instagram"></i
+                    ></a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
@@ -143,50 +171,16 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-4">
             <ul class="accordion">
               <li>
-                <a>Accordion Title One</a>
+                <a>Please fill in the form</a>
                 <div class="content">
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisic elit. Sed
-                    voluptate nihil eumester consectetur similiqu
-                    consectetur.<br /><br />Lorem ipsum dolor sit amet,
-                    consectetur adipisic elit. Et, consequuntur, modi mollitia
-                    corporis ipsa voluptate corrupti elite.
-                  </p>
-                </div>
-              </li>
-              <li>
-                <a>Second Title Here</a>
-                <div class="content">
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisic elit. Sed
-                    voluptate nihil eumester consectetur similiqu
-                    consectetur.<br /><br />Lorem ipsum dolor sit amet,
-                    consectetur adipisic elit. Et, consequuntur, modi mollitia
-                    corporis ipsa voluptate corrupti elite.
-                  </p>
-                </div>
-              </li>
-              <li>
-                <a>Accordion Title Three</a>
-                <div class="content">
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisic elit. Sed
-                    voluptate nihil eumester consectetur similiqu
-                    consectetur.<br /><br />Lorem ipsum dolor sit amet,
-                    consectetur adipisic elit. Et, consequuntur, modi mollitia
-                    corporis ipsa voluptate corrupti elite.
-                  </p>
-                </div>
-              </li>
-              <li>
-                <a>Fourth Accordion Title</a>
-                <div class="content">
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisic elit. Sed
-                    voluptate nihil eumester consectetur similiqu
-                    consectetur.<br /><br />Lorem ipsum dolor sit amet,
-                    consectetur adipisic elit. Et, consequuntur, modi mollitia
-                    corporis ipsa voluptate corrupti elite.
+                    For your inquiry, please provide us with enough details of
+                    your product. The inquiry will be recorded and we'll contact
+                    back to you as much early as possible.
+                    <br />
+                    <br />
+                    Also, reach out to us to our social media platforms, follow
+                    us on instagram or feel free to contact us through whatsapp.
                   </p>
                 </div>
               </li>
@@ -225,20 +219,34 @@ https://templatemo.com/tm-546-sixteen-clothing
             <div class="left-content">
               <h4>About our office</h4>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisic elit. Sed
-                voluptate nihil eumester consectetur similiqu consectetur.<br /><br />Lorem
-                ipsum dolor sit amet, consectetur adipisic elit. Et,
-                consequuntur, modi mollitia corporis ipsa voluptate corrupti.
+                Our Office is placed at the ideal location in Sialkot. The
+                location can be seen on the google map. Our services are open
+                24/7.
               </p>
               <ul class="social-icons">
                 <li>
-                  <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
+                  <a
+                    href="https://www.facebook.com/honey.butt.564"
+                    target="_blank"
+                    ><i class="fa fa-facebook"></i
+                  ></a>
                 </li>
                 <li>
-                  <a href="#"><i class="fa fa-phone"></i></a>
+                  <a href="mailto:xtreeindustry@gmail.com" target="_blank"
+                    ><i class="fa fa-envelope"></i
+                  ></a>
                 </li>
                 <li>
-                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                  <a href="https://wa.me/00923312282829" target="_blank"
+                    ><i class="fa fa-whatsapp"></i
+                  ></a>
+                </li>
+                <li>
+                  <a
+                    href="https://www.instagram.com/xtreeindustry/"
+                    target="_blank"
+                    ><i class="fa fa-instagram"></i
+                  ></a>
                 </li>
               </ul>
             </div>
