--- a/index.html
+++ b/index.html
@@ -99,6 +99,35 @@
             <h4 style="color: #b8d31a;text-shadow: 2px 2px black; font-size: 2rem">SPORTSWEAR</h4>
             
             <h2>Worldwide Shipment</h2>
+            <br />
+              <div>
+                <ul class="social-icons">
+                  <li>
+                    <a href="mailto:xtreeindustry@gmail.com" target="_blank"
+                      ><i class="fa fa-envelope"></i
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="https://wa.me/00923312282829" target="_blank"
+                      ><i class="fa fa-whatsapp"></i
+                    ></a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.facebook.com/honey.butt.564"
+                      target="_blank"
+                      ><i class="fa fa-facebook"></i
+                    ></a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.instagram.com/xtreeindustry/"
+                      target="_blank"
+                      ><i class="fa fa-instagram"></i
+                    ></a>
+                  </li>
+                </ul>
+              </div>
           </div>
         </div>
         <div class="banner-item-02">
@@ -234,7 +263,71 @@
         </div>
       </div>
     </div>
-
+    <div class="find-us">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="section-heading">
+              <h2>Our Location on Maps</h2>
+            </div>
+          </div>
+          <div class="col-md-8">
+            <!-- How to change your own map point
+	1. Go to Google Maps
+	2. Click on your location point
+	3. Click "Share" and choose "Embed map" tab
+	4. Copy only URL and paste it within the src="" field below
+-->
+            <div id="map">
+              <iframe
+                src="https://maps.google.com/maps?q=Av.+L%C3%BAcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                width="100%"
+                height="330px"
+                frameborder="0"
+                style="border: 0"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="left-content">
+              <h4>About our office</h4>
+              <p>
+                Our Office is placed at the ideal location in Sialkot. The
+                location can be seen on the google map. Our services are open
+                24/7.
+              </p>
+              <ul class="social-icons">
+                <li>
+                  <a
+                    href="https://www.facebook.com/honey.butt.564"
+                    target="_blank"
+                    ><i class="fa fa-facebook"></i
+                  ></a>
+                </li>
+                <li>
+                  <a href="mailto:xtreeindustry@gmail.com" target="_blank"
+                    ><i class="fa fa-envelope"></i
+                  ></a>
+                </li>
+                <li>
+                  <a href="https://wa.me/00923312282829" target="_blank"
+                    ><i class="fa fa-whatsapp"></i
+                  ></a>
+                </li>
+                <li>
+                  <a
+                    href="https://www.instagram.com/xtreeindustry/"
+                    target="_blank"
+                    ><i class="fa fa-instagram"></i
+                  ></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="call-to-action">
       <div class="container">
         <div class="row">
