--- a/index.html
+++ b/index.html
@@ -159,13 +159,13 @@
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="products.html"
+              <a href="products.html#sportswear" 
                 ><img
                   src="assets/images/Feature Products/Sportswear.jpg"
                   alt="Rugby Sportswear"
               /></a>
               <div class="down-content">
-                <a href="products.html"><h3 style="color: #f33f3f">Sportswear</h3></a>
+                <a href="products.html#sportswear"><h3 style="color: #f33f3f">Sportswear</h3></a>
                 <p>
                   Buy high quality customized Sportswear with worldwide
                   shipping.
@@ -175,13 +175,13 @@
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="products.html"
+              <a href="products.html#FashionJackets"
                 ><img
                   src="assets/images/Feature Products/Fashion Jackets.jpg"
                   alt="Rain Jackets"
               /></a>
               <div class="down-content">
-                <a href="products.html"><h3 style="color: #f33f3f">Fashion Garments</h3></a>
+                <a href="products.html#FashionJackets"><h3 style="color: #f33f3f">Fashion Garments</h3></a>
                 <p>
                   Buy high quality customized leather and fashion jackets with
                   worldwide shipping.
@@ -191,13 +191,13 @@
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="products.html"
+              <a href="products.html#Motorbike"
                 ><img
                   src="assets/images/Feature Products/Motorbike Garments.jpg"
                   alt="Gloves & Protection"
               /></a>
               <div class="down-content">
-                <a href="products.html"><h3 style="color: #f33f3f; font-size: 27px;">Motorbike Garments</h3></a>
+                <a href="products.html#Motorbike"><h3 style="color: #f33f3f; font-size: 27px;">Motorbike Garments</h3></a>
 
                 <p>
                   Buy high quality gloves, motorbike garments & Protection.
@@ -207,13 +207,13 @@
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="products.html"
+              <a href="products.html#gloves_p"
                 ><img
                   src="assets/images/Feature Products/Gloves & Protection.jpg"
                   alt="Gloves & Protection"
               /></a>
               <div class="down-content">
-                <a href="products.html"><h3 style="color: #f33f3f; font-size: 27px;">Protection & Gloves</h3></a>
+                <a href="products.html#gloves_p"><h3 style="color: #f33f3f; font-size: 27px;">Protection & Gloves</h3></a>
 
                 <p>
                   Buy high quality customized Gloves Collection and Protections.
