--- a/index.html
+++ b/index.html
@@ -279,14 +279,9 @@
 	4. Copy only URL and paste it within the src="" field below
 -->
             <div id="map">
-              <iframe
-                src="https://maps.google.com/maps?q=Av.+L%C3%BAcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed"
-                width="100%"
-                height="330px"
-                frameborder="0"
-                style="border: 0"
-                allowfullscreen
-              ></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1888.6861696905296!2d74.54769958680967!3d32.492580944942326!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391eea60565d4d95%3A0x90f524b06ae17e85!2sCircular%20Rd%2C%20Wasi%20Shaheedan%2C%20Sialkot%2C%20Punjab!5e0!3m2!1sen!2s!4v1612119383399!5m2!1sen!2s" 
+              width="100%" height="330px" frameborder="0" style="border:0;" allowfullscreen="" 
+              aria-hidden="false" tabindex="0"></iframe>
             </div>
           </div>
           <div class="col-md-4">
