Updated Form and a Product Category

--- a/index.html
+++ b/index.html
@@ -191,6 +191,22 @@
           </div>
           <div class="col-md-4">
             <div class="product-item">
+              <a href="products.html#face_mask"
+                ><img
+                  src="assets/images/Feature Products/Face_mask.jpg"
+                  alt="Face Masks"
+              /></a>
+              <div class="down-content">
+                <a href="products.html#face_mask"><h3 style="color: #f33f3f">Face Masks</h3></a>
+                <p>
+                  Buy high quality customized face masks of all types with worldwide shipments.
+                </p>
+              </div>
+            </div>
+          </div>
+          
+          <div class="col-md-4">
+            <div class="product-item">
               <a href="products.html#Motorbike"
                 ><img
                   src="assets/images/Feature Products/Motorbike Garments.jpg"
