google site verification

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <link rel="manifest" href="./assets/images/Logo/site.webmanifest">
 
     <title>Sportswear | Leather Jackets | MotorBike Garments </title>
-
+    <meta name="google-site-verification" content="oIW9NXSCMefwkxW6MpzZpQR4vKio_Y_bKOSZBf8iTOc" />
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <!--
