--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <meta name="robots" content="index,follow" />
     <meta
       name="description"
-      content="XTreeIndustry deals in Sportswear, Sports Outfits, Leather Jacksets, Motorbike Garments, Motorbike Protections and Leather Gloves. The Company is based in Sialkot, Pakistan"
+      content="XTreeIndustry deals in Sportswear, Sports Outfits, Leather Jacksets, Motorbike Garments, Motorbike Protections and Leather Gloves."
     />
     <meta
       name="keywords"
-      content="XtreeIndustry, Leather Products, Sportswear, Quality Products, Sialkot, Sports ,Customized Order, Suits, "
+      content="XtreeIndustry,XtreeIndustry Sportswear, Xtree Industry, Fashion Leather, Leather Products,Xtree Sportswear, Quality Products, Sialkot, Sports ,Customized Order, Suits, "
     />
     <meta name="author" content="@HamzAhmd" />
     <link
@@ -25,7 +25,7 @@
 <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/Logo/favicon-16x16.png">
 <link rel="manifest" href="./assets/images/Logo/site.webmanifest">
 
-    <title>Sportswear | Leather Jackets | MotorBike Garments </title>
+    <title> XtreeIndustry - Sportswear | Leather and MotorBike Garments </title>
     <meta name="google-site-verification" content="oIW9NXSCMefwkxW6MpzZpQR4vKio_Y_bKOSZBf8iTOc" />
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
@@ -96,7 +96,7 @@
       <div class="owl-banner owl-carousel">
         <div class="banner-item-01">
           <div class="text-content">
-            <h4 style="color: #b8d31a;text-shadow: 2px 2px black; font-size: 2rem">SPORTSWEAR</h4>
+            <h1 style="color: #b8d31a;text-shadow: 3px 3px black; font-size: 2.5rem;font-weight: bold;padding: 0.5rem;">SPORTSWEAR</h1>
             
             <h2>Worldwide Shipment</h2>
             <br />
@@ -132,13 +132,13 @@
         </div>
         <div class="banner-item-02">
           <div class="text-content">
-            <h4 style="color: #b8d31a;text-shadow: 2px 2px black; font-size: 2rem">Leather Jackets</h4>
-            <h2 style="color: #f33f3f;text-shadow: 2px 2px black; font-weight: bold">Best in Quality</h2>
+            <h1 style="color: #b8d31a;text-shadow: 2px 2px black; font-size: 2.5rem;font-weight: bold;padding: 0.5rem;">Leather Jackets</h1>
+             <h2 style="color: #f33f3f;text-shadow: 2px 2px black; font-weight: bold">Best in Quality</h2>
           </div>
         </div>
         <div class="banner-item-03">
           <div class="text-content">
-            <h4 style="color: #b8d31a;text-shadow: 2px 2px black; font-size: 2rem">Customized Order</h4>
+            <h1 style="color: #b8d31a;text-shadow: 2px 2px black; font-size: 2rem;font-weight: bold;padding: 0.5rem;">Customized Order</h1>
             <h2>Grab Your Products</h2>
           </div>
         </div>
